@@ -306,10 +306,10 @@ using the Docker or VM environments described above, you might need to
 L<create the database|https://docs.oracle.com/cd/B28359_01/server.111/b28310/create001.htm#ADMIN11068>
 and configure the SID. Assuming you have an Oracle SID named C<FLIPR_TEST> set
 up in your C<F<TNSNAMES.ORA>|https://www.orafaq.com/wiki/Tnsnames.ora> file,
-tell Sqitch where to send the change via a
+tell Sqitch where to send the change to a target specified as a
 L<database URI|https://github.com/libwww-perl/uri-db/>, such as
 
-  export SQITCH_URI=db:oracle://$username:$password@/flipr_test
+  export SQITCH_TARGET=db:oracle://$username:$password@/flipr_test
 
 With that URI set up, we can deploy:
 
