@@ -10,6 +10,13 @@ Revision history for Perl extension App::Sqitch
        exception objects rather than strings, for more consistent error
        handling throughout.
      - Removed duplicate DBI error handling code from engines and tests.
+     - Fixed an order of operation issue that prevented Sqitch from detecting
+       Yugabyte before attempting to create an advisory lock, which results in
+       an error for more recent Yugabyte releases. Thanks to Stefano Ricciardi
+       for the report (#841).
+     - Removed a wayward mention of the long-deprecated `SQITCH_URI`
+       environment variable from the Oracle tutorial. Thanks to Austin Hanson
+       for the report (#845).
 
 1.4.1  2024-02-04T16:35:32Z
      - Removed the quoting of the role and warehouse identifiers that was
